[project]
name = "bst-project"
version = "0.1.0"
description = "Базовая реализация операций бинарного дерева поиска (BST)."
authors = [{ name = "Your Name" }]
requires-python = ">=3.8"
readme = "README.md"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

